--- a/testa.html
+++ b/testa.html
@@ -1,1 +1,1 @@
-This is from from Third fifth commmit  play-around-with-git.
+This is from from Third fifth sixth one. commmit  play-around-with-git.
